        ***************************************************************

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-18. (2019-06-25) -
-------------------------------------------------------

BUG FIXING
  o Bug in plotDistractorAnalysis() was fixed. X-ticks are now displayed
    even with discrete = T argument.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-17. (2019-06-24) -
-------------------------------------------------------

BUG FIXING
  o DistractorAnalysis() and plotDistractorAnalysis() now handle discrete
    matching and groups specified via argument cut.points.
  o Distractor plots in Validity/Items tab now properly handle discrete
    criterion and the number of groups is correctly descreased when criterion
    does not have unique cuts.
  o Bug in Raju in DIF/Fairness tab was fixed. Plots for items are now
    displayed for dataBov dataset.

MAJOR UPDATES
  o Checking of unique cuts for distractor plots was added into Reports.
    Warning is displayed when cuts are not unique and slider is updated.

MINOR UPDATES
  o Some typos were fixed.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-16. (2019-06-21) -
-------------------------------------------------------

BUG FIXING
  o Bug in Bock's model for binary items was fixed in reports.
  o Histogram when some levels of total scores are missing were fixed
    in Summary and DIF tab.

MAJOR UPDATES
  o Legend was added into IRT plots when downloaded.
  o IRT models now respect ordering of items.

MINOR UPDATES
  o Some typos in IRT models tab were fixed.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-15. (2019-06-20) -
-------------------------------------------------------

BUG FIXING
  o DIF summary table bug was fixed. Table is disaplayed when
    some DIF methods cannot be fitted.