@@ -12,33 +12,32 @@ uiValidity <-
                         Correlation heat map can be reordered using hierarchical",
                         HTML("<b>clustering method</b>"), "selected below. With", HTML("<b>number  of clusters</b>"), "larger than 1, the rectangles representing
                         clusters are drawn. The values of correlation heatmap may be displayed and also downloaded."),
-                      fluidRow(div(style = "display: inline-block; vertical-align: top; width: 5%;"),
-                               column(3, selectInput(inputId = "type_of_corr",
+                      fluidRow(column(3, selectInput(inputId = "type_of_corr",
                                                      label    = "Choose correlation",
                                                      choices  = c("Pearson"    = "pearson",
                                                                   "Spearman"   = "spearman",
                                                                   "Polychoric" = "polychoric"),
                                                      selected = 'polychoric')),
-                               column(3, div(class = "input-box",
-                                             selectInput(inputId = 'corr_plot_clustmethod',
-                                                         label = 'Clustering method',
-                                                         choices = list("None" = "none",
-                                                                        "Ward's"  = "ward.D",
-                                                                        "Ward's n. 2" = "ward.D2",
-                                                                        "Single" = "single",
-                                                                        "Complete" = "complete",
-                                                                        "Average" = "average",
-                                                                        "McQuitty" = "mcquitty",
-                                                                        "Median" = "median",
-                                                                        "Centroid" = "centroid"),
-                                                         selected = "none"))),
-                               column(3, div(class = "input-box",
-                                             numericInput(inputId = 'corr_plot_clust',
-                                                          label = 'Number of clusters',
-                                                          value = 1,
-                                                          min = 1,
-                                                          max = 1))),
-                               column(3, actionButton(inputId = 'show_corr',
+                               column(3, selectInput(inputId = 'corr_plot_clustmethod',
+                                                     label = 'Clustering method',
+                                                     choices = list("None" = "none",
+                                                                    "Ward's"  = "ward.D",
+                                                                    "Ward's n. 2" = "ward.D2",
+                                                                    "Single" = "single",
+                                                                    "Complete" = "complete",
+                                                                    "Average" = "average",
+                                                                    "McQuitty" = "mcquitty",
+                                                                    "Median" = "median",
+                                                                    "Centroid" = "centroid"),
+                                                     selected = "none")),
+                               column(3, numericInput(inputId = 'corr_plot_clust',
+                                                      label = 'Number of clusters',
+                                                      value = 1,
+                                                      min = 1,
+                                                      max = 1)),
+                               column(3,
+                                      tags$style(HTML('#show_corr { margin-top: 25px }')),
+                                      actionButton(inputId = 'show_corr',
                                                       label = 'Display correlation values',
                                                       class = 'btn btn-primary'))),
                       conditionalPanel(condition = "input.type_of_corr == 'pearson'",
